# verification_toolkit

./: .gitignore  PUBLISHING_GUIDE.md  README.md  RELEASE_CHECKLIST.md  batch_workflow_plan.md  demo_batch_workflow.py  demo_runbook.yaml  pyproject.toml  setup_github.sh
.github/: copilot-instructions.md
examples/: demo_agent.py  full_demo.py
src/verification_toolkit/: __init__.py  github.py  interfaces.py
src/verification_toolkit/batch_workflow/: __init__.py  cli.py  config.py  executor.py  report.py  runner.py
src/verification_toolkit/batch_workflow/agents/: __init__.py  registry.py
src/verification_toolkit/batch_workflow/context/: __init__.py  github.py
src/verification_toolkit/batch_workflow/tests/: __init__.py  test_batch_workflow.py
tests/: test_interfaces.py
